--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" />
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
